Fixed scrollbars & animation in navbar.

--- a/platform/public/dm-plugins/deck-navbar/deck-navbar.less
+++ b/platform/public/dm-plugins/deck-navbar/deck-navbar.less
@@ -4,12 +4,11 @@
   border-radius:0px;
   margin-bottom:0px;
 
-  height: 40px;
-  min-height: 41px;
+  height: 45px;
 
   opacity: 0.15;
-  transition: opacity 1s ease, bottom 0.5s ease, padding 0.5s ease;
-  bottom: -20px;
+  transition: opacity 1s ease, bottom 0.5s ease;
+  bottom: -25px;
 
   &:hover {
     opacity: 1.0;
@@ -27,6 +26,7 @@
   .navbar-nav > li > a {
     padding-top: 0;
     padding-bottom: 10px;
+    transition: padding 0.5s ease
   }
 
   @media (min-width: 768px) {
