--- a/platform/public/less/scrollbar.less
+++ b/platform/public/less/scrollbar.less
@@ -2,6 +2,7 @@
     -webkit-box-shadow:inset 0 0 20px rgba(0,0,0,0.3);
     background-color:#fff;
     border-radius:2.0px;
+    cursor:pointer;
 }
 
 ::-webkit-scrollbar {
